# RenderLib

./: .gitignore  CMakeLists.txt  README.md
assets/: peasant_man.fbx
dependencies/: CMakeLists.txt
include/RenderLib/: GPUApiFactory.hpp  IGPUApi.hpp  IMesh.hpp  IModel.hpp  ITexture.hpp  ImageData.hpp  Material.hpp  MaterialDescriptor.hpp  MeshData.hpp  MeshDescriptor.hpp  Model.hpp  ModelDescriptor.hpp  OpenGL4Api.hpp  OpenGL4Mesh.hpp  Texture.hpp  TextureDescriptor.hpp  Transform.hpp  Utils.h  Utils.hpp  Vertex.hpp
include/RenderLib/utils/: ImageData.hpp  MaterialDescriptor.hpp  MeshDescriptor.hpp  ModelDescriptor.hpp  TextureDescriptor.hpp  Transform.hpp  Utils.hpp
src/: GPUApiFactory.cpp  IGPUApi.hpp  Model.cpp  main.cpp  mainTestTrasparency.cpp  sprite_vertex.glsl
src/discontinued/: ObjParser.hpp
src/ogl4/: OpenGL4Api.cpp  OpenGL4Api.hpp  OpenGL4Mesh.cpp  OpenGL4Mesh.hpp  OpenGL4Model.cpp  OpenGL4Model.hpp  OpenGL4Texture.cpp  OpenGL4Texture.hpp  glad.c  glad.h
src/shaders/: FragmentShader2D.glsl  sprite_pixel.glsl  sprite_vertex.glsl
src/utils/: MeshData.cpp  MeshData.h  ObjParser.cpp  ObjParser.hpp  Transform.cpp  Utils.cpp
tests/: CMakeLists.txt  MockGPUApiFactory.hpp  MockOGL4GPUApi.hpp  exampleGtestTests.cpp  gtest_test.cpp  main.cpp
